positional_derive/tests/ui/unit-struct.stderr
error: only structs with named fields

         = help: `#[derive(ToPositionalRow)]` can only be used on structs with named fields, this is a unit struct

 --> tests/ui/unit-struct.rs:4:1
  |
4 | struct MyData;
  | ^^^^^^^^^^^^^^
